fix: spacing, loader timing, font size

--- a/src/output.css
+++ b/src/output.css
@@ -607,9 +607,9 @@ body {
   margin-bottom: 1.5rem;
 }
 
-.my-8 {
-  margin-top: 2rem;
-  margin-bottom: 2rem;
+.my-4 {
+  margin-top: 1rem;
+  margin-bottom: 1rem;
 }
 
 .mb-2 {
